# MOSP

./: .editorconfig  .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  Pipfile  Procfile  README.md  SECURITY.md  app.json  docker-compose.yml  entrypoint.sh  index.html  manager.py  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  runserver.py  setup.py  webserver.wsgi.example
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  docker-dockerhub.yml  docker-ghcr.yml  pre-commit.yaml  pythonapp.yml
contrib/: crawler-user-agents.sh  update.sh  webserver.wsgi.example
docs/: api-v1.rst  api-v2.rst  conf.py  index.rst  installation.rst  models.rst  modules.rst  security-model.rst  usage.rst
docs/_templates/: page.html  versioning.html
instance/: development.py  docker.py  heroku.py  production.py.sample
migrations/: env.py
migrations/versions/: 029c7f524121_added_email_property_for_user.py  257faccd2b4f_added_new_version_model_for_the_.py  2af9469ca54d_update_type_of_some_string_column_to_.py  2c5b93302e8b_added_new_collection_table.py  44015f761a68_alter_column_is_locked_of_jsonobject.py  55ca2e7bf69a_removed_public_profile_attribe_from_.py  7a6232889a35_remove_is_public_attribute_from_json_.py  863c39a3dc7e_added_apikey_attribute_to_user.py  88304952e3ff_added_is_locked_attribute_to_object.py  93451e9eda64_added_boolean_column_is_membership_.py  9dc0bb3ec653_added_license_table.py  a6074f58eb13_added_new_event_model.py  c3f2a1b4e5d6_add_forked_from_id_to_schema.py  fb48dfd74687_add_a_new_association_table_to_link_.py  fbaf9c31d7bb_update_nullable_valuefor_objects_and_.py
mosp/: __init__.py  bootstrap.py  commands.py  conf.py  forms.py  manager.py  runserver.py
mosp/api/: common.py
mosp/api/v1/: __init__.py  common.py  jsonobject.py  organization.py  processors.py  schema.py
mosp/api/v2/: __init__.py  collection.py  common.py  object.py  organization.py  schema.py  types.py  user.py  version.py
mosp/instance/: development.py  heroku.cfg  production.py.sample
mosp/lib/: collections_utils.py  misc_utils.py  objects_utils.py  schemas_utils.py  user_utils.py
mosp/models/: __init__.py  _datetime.py  collection.py  event.py  jsonobject.py  license.py  organization.py  schema.py  user.py  version.py
mosp/notifications/: emails.py  notifications.py
mosp/scripts/: __init__.py  create_user.py  import_licenses.py
mosp/src/: bootstrap.py  runserver.py
mosp/src/instance/: development.cfg  production.cfg.sample
mosp/src/scripts/: __init__.py  (+1 more)
mosp/templates/: about.html  about_more.html  account_recovery.html  account_recovery_set_password.html  collection.html  collections.html  delete_schema.html  edit_collection.html  edit_json.html  edit_object.html  edit_schema.html  edit_user.html  help.html  humans.txt  index.html  layout.html  list_objects.html  list_versions.html  login.html  organization.html  organization_members.html  organizations.html  relations_schema.html  robots.txt  schema.html  schemas.html  security.txt  signup.html  stats.html  terms.html  user.html  user_schemas.html  versions_object.html  view_diff.html  view_object.html  view_schema.html  view_version.html
mosp/translations/: internationalization.sh  messages.pot
mosp/views/: __init__.py  admin.py  collection.py  common.py  decorators.py  object.py  objectbp.py  organization.py  schema.py  session_mgmt.py  stats.py  user.py  views.py
mosp/web/: __init__.py  forms.py
src/: bootstrap.py  codemirror-bundle.js  manager.py  runserver.py
src/instance/: development.cfg  heroku.cfg  production.cfg  production.cfg.sample
src/lib/: misc_utils.py
src/scripts/: __init__.py  create_user.py  import_licenses.py
src/web/: __init__.py  forms.py
tests/: conftest.py  test_schema.py  test_user.py  test_web.py
(+149 files in other folders)
