[tool.poetry]
name = "mosp"
version = "0.14.0"
description = "A platform for creating, editing and sharing JSON objects."
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3.11"
Flask = "^1.1.1"
Flask-SQLAlchemy = "^2.4.1"
Flask-Login = "^0.5.0"
Flask-Principal = "^0.4.0"
Flask-WTF = "^0.14.2"
Flask-Migrate = "^2.5.2"
Flask-Admin = "^1.5.4"
Flask-paginate = "^0.5.5"
Flask-Mail = "^0.9.1"
WTForms = "^2.2.1"
validate_email = "^1.3"
flask-babel = "^1.0.0"
alembic = "^1.3.1"
requests = "^2.22.0"
jsonschema = "^3.2.0"
flask-restless = "^0.17.0"
psycopg2-binary = "^2.8.4"
flask-cors = "^3.0.8"
networkx = "^2.4"
email_validator = "^1.1.1"
flask_restx = "^0.2.0"
feedgen = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.1"
sqlalchemy-schemadisplay = "^1.3"
autoflake = "^1.4"
gitchangelog = "^3.0.4"
sphinx-book-theme = "^0.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
