[tool.poetry]
name = "mosp"
version = "0.17.1"
description = "A platform for creating, editing and sharing JSON objects."
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.26"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Login = "^0.5.0"
Flask-Principal = "^0.4.0"
Flask-WTF = "^0.14.2"
Flask-Migrate = "^3.1.0"
Flask-Admin = "^1.5.8"
Flask-paginate = "^0.8.1"
Flask-Mail = "^0.9.1"
WTForms = "^2.3.3"
validate_email = "^1.3"
flask-babel = "^2.0.0"
alembic = "^1.7.4"
requests = "^2.26.0"
jsonschema = "^4.1.1"
psycopg2-binary = "^2.9.1"
flask-cors = "^3.0.8"
networkx = "^2.4"
email_validator = "^1.1.1"
flask_restx = "^0.5.1"
feedgen = "^0.9.0"
types-requests = "^2.26.1"
typing-extensions = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
sqlalchemy-schemadisplay = "^1.3"
autoflake = "^1.4"
gitchangelog = "^3.0.4"
sphinx-book-theme = "^0.1.0"
flake8 = "^4.0.1"
mypy = "^0.910"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
