[tool.poetry]
name = "mosp"
version = "0.17.1"
description = "A platform for creating, editing and sharing JSON objects."
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
SQLAlchemy = "^2.0.23"
Flask = "^3.0.0"
werkzeug = "3.0.3"
Flask-SQLAlchemy = "^3.0.3"
Flask-Login = "^0.6.0"
Flask-Principal = "^0.4.0"
Flask-WTF = "^1.1.1"
Flask-Migrate = "^3.1.0"
Flask-Admin = "^1.5.8"
Flask-paginate = "^2023.10.24"
Flask-Mail = "^0.9.1"
WTForms = "^3.0.1"
validate_email = "^1.3"
flask-babel = "^4.0.0"
alembic = "^1.7.4"
requests = "^2.32.0"
jsonschema = "^4.1.1"
psycopg2-binary = "^2.9.9"
flask-cors = "^3.0.10"
networkx = "^2.4"
email_validator = "^1.1.1"
flask_restx = "^1.3.0"
feedgen = "^0.9.0"
types-requests = "^2.26.1"
typing-extensions = "^4.0.1"
types-setuptools = "^65.6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
sqlalchemy-schemadisplay = "^1.3"
autoflake = "^1.4"
gitchangelog = "^3.0.4"
sphinx-book-theme = "^0.1.0"
flake8 = "^4.0.1"
mypy = "^0.910"
reorder-python-imports = "^3.0.1"
pyupgrade = "^2.31.1"
black = "^24.3.0"
pre-commit = "^2.17.0"
sphinx-multiversion = "^0.2.4"
sphinx-autodoc-typehints = "^1.18.3"
pip-audit = "^2.6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

exclude = ["migrations", "docs", "tests"]
